iml-agent/src/snapshots/iml_agent__high_availability__tests__read_es.snap
---
source: iml-agent/src/high_availability.rs
expression: cluster
---
Cluster {
    nodes: [
        Node {
            name: "ai400-0a9c-vm00",
            id: "4",
            online: true,
            standby: false,
            standby_onfail: false,
            maintenance: false,
            pending: false,
            unclean: false,
            shutdown: false,
            expected_up: true,
            is_dc: false,
            resources_running: 13,
            type: Member,
        },
        Node {
            name: "ai400-0a9c-vm01",
            id: "3",
            online: true,
            standby: false,
            standby_onfail: false,
            maintenance: false,
            pending: false,
            unclean: false,
            shutdown: false,
            expected_up: true,
            is_dc: true,
            resources_running: 10,
            type: Member,
        },
        Node {
            name: "ai400-0a9c-vm02",
            id: "2",
            online: true,
            standby: false,
            standby_onfail: false,
            maintenance: false,
            pending: false,
            unclean: false,
            shutdown: false,
            expected_up: true,
            is_dc: false,
            resources_running: 9,
            type: Member,
        },
        Node {
            name: "ai400-0a9c-vm03",
            id: "1",
            online: true,
            standby: false,
            standby_onfail: false,
            maintenance: false,
            pending: false,
            unclean: false,
            shutdown: false,
            expected_up: true,
            is_dc: false,
            resources_running: 9,
            type: Member,
        },
    ],
    resources: [
        Resource {
            id: "mgs",
            resource_agent: "ocf::ddn:lustre-server",
            role: "Started",
            active: true,
            orphaned: false,
            managed: true,
            failed: false,
            failure_ignored: false,
            nodes_running_on: 1,
            active_node_name: Some(
                "ai400-0a9c-vm00",
            ),
            active_node_id: Some(
                "4",
            ),
        },
        Resource {
            id: "mdt0000-fs0a9c",
            resource_agent: "ocf::ddn:lustre-server",
            role: "Started",
            active: true,
            orphaned: false,
            managed: true,
            failed: false,
            failure_ignored: false,
            nodes_running_on: 1,
            active_node_name: Some(
                "ai400-0a9c-vm00",
            ),
            active_node_id: Some(
                "4",
            ),
        },
        Resource {
            id: "mdt0001-fs0a9c",
            resource_agent: "ocf::ddn:lustre-server",
            role: "Started",
            active: true,
            orphaned: false,
            managed: true,
            failed: false,
            failure_ignored: false,
            nodes_running_on: 1,
            active_node_name: Some(
                "ai400-0a9c-vm01",
            ),
            active_node_id: Some(
                "3",
            ),
        },
        Resource {
            id: "mdt0002-fs0a9c",
            resource_agent: "ocf::ddn:lustre-server",
            role: "Started",
            active: true,
            orphaned: false,
            managed: true,
            failed: false,
            failure_ignored: false,
            nodes_running_on: 1,
            active_node_name: Some(
                "ai400-0a9c-vm02",
            ),
            active_node_id: Some(
                "2",
            ),
        },
        Resource {
            id: "mdt0003-fs0a9c",
            resource_agent: "ocf::ddn:lustre-server",
            role: "Started",
            active: true,
            orphaned: false,
            managed: true,
            failed: false,
            failure_ignored: false,
            nodes_running_on: 1,
            active_node_name: Some(
                "ai400-0a9c-vm03",
            ),
            active_node_id: Some(
                "1",
            ),
        },
        Resource {
            id: "ost0000-fs0a9c",
            resource_agent: "ocf::ddn:lustre-server",
            role: "Started",
            active: true,
            orphaned: false,
            managed: true,
            failed: false,
            failure_ignored: false,
            nodes_running_on: 1,
            active_node_name: Some(
                "ai400-0a9c-vm00",
            ),
            active_node_id: Some(
                "4",
            ),
        },
        Resource {
            id: "ost0001-fs0a9c",
            resource_agent: "ocf::ddn:lustre-server",
            role: "Started",
            active: true,
            orphaned: false,
            managed: true,
            failed: false,
            failure_ignored: false,
            nodes_running_on: 1,
            active_node_name: Some(
                "ai400-0a9c-vm01",
            ),
            active_node_id: Some(
                "3",
            ),
        },
        Resource {
            id: "ost0002-fs0a9c",
            resource_agent: "ocf::ddn:lustre-server",
            role: "Started",
            active: true,
            orphaned: false,
            managed: true,
            failed: false,
            failure_ignored: false,
            nodes_running_on: 1,
            active_node_name: Some(
                "ai400-0a9c-vm02",
            ),
            active_node_id: Some(
                "2",
            ),
        },
        Resource {
            id: "ost0003-fs0a9c",
            resource_agent: "ocf::ddn:lustre-server",
            role: "Started",
            active: true,
            orphaned: false,
            managed: true,
            failed: false,
            failure_ignored: false,
            nodes_running_on: 1,
            active_node_name: Some(
                "ai400-0a9c-vm03",
            ),
            active_node_id: Some(
                "1",
            ),
        },
        Resource {
            id: "ost0004-fs0a9c",
            resource_agent: "ocf::ddn:lustre-server",
            role: "Started",
            active: true,
            orphaned: false,
            managed: true,
            failed: false,
            failure_ignored: false,
            nodes_running_on: 1,
            active_node_name: Some(
                "ai400-0a9c-vm00",
            ),
            active_node_id: Some(
                "4",
            ),
        },
        Resource {
            id: "ost0005-fs0a9c",
            resource_agent: "ocf::ddn:lustre-server",
            role: "Started",
            active: true,
            orphaned: false,
            managed: true,
            failed: false,
            failure_ignored: false,
            nodes_running_on: 1,
            active_node_name: Some(
                "ai400-0a9c-vm01",
            ),
            active_node_id: Some(
                "3",
            ),
        },
        Resource {
            id: "ost0006-fs0a9c",
            resource_agent: "ocf::ddn:lustre-server",
            role: "Started",
            active: true,
            orphaned: false,
            managed: true,
            failed: false,
            failure_ignored: false,
            nodes_running_on: 1,
            active_node_name: Some(
                "ai400-0a9c-vm02",
            ),
            active_node_id: Some(
                "2",
            ),
        },
        Resource {
            id: "ost0007-fs0a9c",
            resource_agent: "ocf::ddn:lustre-server",
            role: "Started",
            active: true,
            orphaned: false,
            managed: true,
            failed: false,
            failure_ignored: false,
            nodes_running_on: 1,
            active_node_name: Some(
                "ai400-0a9c-vm03",
            ),
            active_node_id: Some(
                "1",
            ),
        },
    ],
    bans: [
        Ban {
            id: "mgs-vg-placement-rule",
            resource: "mgs-vg",
            node: "ai400-0a9c-vm02",
            weight: -1000000,
            master_only: false,
        },
        Ban {
            id: "mgs-vg-placement-rule",
            resource: "mgs-vg",
            node: "ai400-0a9c-vm03",
            weight: -1000000,
            master_only: false,
        },
        Ban {
            id: "mgs-placement-rule",
            resource: "mgs",
            node: "ai400-0a9c-vm02",
            weight: -1000000,
            master_only: false,
        },
        Ban {
            id: "mgs-placement-rule",
            resource: "mgs",
            node: "ai400-0a9c-vm03",
            weight: -1000000,
            master_only: false,
        },
        Ban {
            id: "location-stonith-ai400-0a9c-vm03.ai400-0a9c-vm03",
            resource: "stonith-ai400-0a9c-vm03",
            node: "ai400-0a9c-vm03",
            weight: -1000000,
            master_only: false,
        },
        Ban {
            id: "location-stonith-ai400-0a9c-vm02.ai400-0a9c-vm02",
            resource: "stonith-ai400-0a9c-vm02",
            node: "ai400-0a9c-vm02",
            weight: -1000000,
            master_only: false,
        },
        Ban {
            id: "location-stonith-ai400-0a9c-vm01.ai400-0a9c-vm01",
            resource: "stonith-ai400-0a9c-vm01",
            node: "ai400-0a9c-vm01",
            weight: -1000000,
            master_only: false,
        },
        Ban {
            id: "location-stonith-ai400-0a9c-vm00.ai400-0a9c-vm00",
            resource: "stonith-ai400-0a9c-vm00",
            node: "ai400-0a9c-vm00",
            weight: -1000000,
            master_only: false,
        },
    ],
    resource_mounts: {},
}
